--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/profile2.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/img.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tarun Kaushik</title>
+    <title>Sanjay Bandaru</title>
   </head>
   <body>
     <div id="root"></div>
